Add all tutorial steps for A-level

--- a/investtrack-frontend/docs/tutorial/03-ci.md
+++ b/investtrack-frontend/docs/tutorial/03-ci.md
@@ -1,17 +1,22 @@
 
 ---
 
-### `docs/tutorial/03-ci.md`
+#### 03-ci.md
 ```markdown
-# 03 — CI with GitHub Actions
+---
+layout: default
+title: Step 3 - Continuous Integration (CI)
+---
 
-**Goal:** Run tests on every push.
+# Step 3: Continuous Integration (CI)
 
-We use `.github/workflows/ci.yml`:
+Use **GitHub Actions** to run tests automatically on every push.
+
+## Add Workflow File
+Create `.github/workflows/ci.yml`:
 
 ```yaml
-name: CI
-
+name: CI Test
 on:
   push:
     branches: [ main ]
@@ -20,28 +25,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: investtrack-frontend
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Use Node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
-          cache-dependency-path: investtrack-frontend/package-lock.json
-
-      - name: Install deps
-        run: npm ci
-
-      - name: Run tests (with coverage)
-        run: npm run test -- --coverage
-
-      - name: Upload coverage artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage
-          path: investtrack-frontend/coverage/
+      - run: npm install
+      - run: npm run test
